--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "helmet": "^7.1.0",
     "pg": "^8.11.3",
     "sequelize": "^6.37.1"
   },
